--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 						<!-- 模块1 基本信息 start-->
 						<div class="part1">
 							<div class="p1-title">基本信息</div>
+							<div class="p1-cont">
+								<ul>
+									<li><span class="p1-tips">昵称:</span> Coffee_Killer</li>
+									<li><span class="p1-tips">邮箱:</span> 18320210361@163.com</li>
+									<li><span class="p1-tips">手机:</span> 18320210361</li> 
+								</ul>
+							</div>
 						</div>
 						<!-- 模块1 ed -->
 					</div>
