--- a/index.html
+++ b/index.html
@@ -46,37 +46,52 @@
 							<div class="p1-title">基本信息</div>
 							<div class="p1-cont">
 								<div class="p1-left">
-									<img class="ai-header" src="./images/header-ai.jpg" alt="AI生成的大头图">
+									<div>
+										<img class="ai-header" src="./images/header-ai.jpg" alt="AI生成的大头图">
+									</div>
+									<div>
+										<img class="common-header" src="./images/header.jpg" alt="常用头像">
+									</div>
 								</div>
 								<div class="p1-right">
 									<ul class="p1-ul1">
-										<li><span class="p1-tips">昵称:</span>Coffee_Killer</li>
-										<li><span class="p1-tips">性别:</span>一个健康的男人</li>
-										<li><span class="p1-tips">B站主页:</span><a href="https://space.bilibili.com/248826433" target="_blank">咖啡Killer</a></li>
+										<li>
+											<span class="p1-tips">昵称:</span>
+											<span class="name">Coffee_Killer</span>
+										</li>
+										<li><span class="p1-tips">性别:</span>Good Boy</li>
+										<li>
+											<span class="p1-tips">B站主页:</span>
+											<a class="BiliBili-link" href="https://space.bilibili.com/248826433" target="_blank">咖啡Killer</a>
+										</li>
 									</ul>
 									<ul class="p1-ul2">
-										<li><span class="p1-tips">邮箱:</span>zaiqiao2481@163.com</li>
 										<li><span class="p1-tips">手机:</span>183****0361</li>
 										<li><span class="p1-tips">QQ:</span>1691810090</li>
 										<li><span class="p1-tips">微信:</span>Coffee2113</li>
+										<li><span class="p1-tips">邮箱:</span>zaiqiao2481@163.com</li>
 									</ul>
 									<ul class="p1-ul3">
-										<li><span class="p1-tips">目标:</span>全栈开发程序员</li>
+										<li>
+											<span class="p1-tips">目标:</span>
+											<span class="dream">全栈开发程序员</span>
+										</li>
 										<li><span class="p1-tips">现职位:</span>前端开发</li>
 										<li><span class="p1-tips">教育背景:</span>专科</li>
+										<li><span class="p1-tips">现居地:</span>广东·深圳</li>
 									</ul>
 									<ul class="p1-ul4">
 										<li>
 											<span class="p1-tips">其他链接:</span>
-											<a href="https://www.cnblogs.com/coffee-killer/" target="_blank">CNBlog</a> |
-											<a href="https://gitee.com/coffeekiller002">Gitee</a> |
-											<a href="https://github.com/CoffeeKiller1">GitHub</a>
+											<a class="clog-link" href="https://www.cnblogs.com/coffee-killer/" target="_blank">CNBlog</a> |
+											<a class="gitee-link" href="https://gitee.com/coffeekiller002" target="_blank">Gitee</a> |
+											<a class="github-link" href="https://github.com/CoffeeKiller1" target="_blank">GitHub</a>
 										</li>
 									</ul>
 								</div>
 							</div>
 						</div>
-						<!-- 模块1 ed -->
+						<!-- 模块1 end -->
 					</div>
 				</div>
 				<!-- 主体区域 end -->
