add extendMod and otherCodeMod

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
 										<span>ES6</span>
 										<span>AJAX</span>
 										<span>Bootstrap/ElementUI/ECharts</span>
+										<span>微信小程序</span>
+										<span>Uni-App</span>
 										<span>Nodejs</span>
 										<span>TypeScript</span>
 										<span>WebPack</span>
@@ -152,11 +154,33 @@
 								</div>
 								<!-- 其他语言模块 -->
 								<div class="code-mod mod">
-
+									<div class="mod-title">OtherCode <span class="iconfont icon-shuju"></span></div>
+									<div class="tag-cont code-tag-cont">
+										<span>Python 基础</span>
+										<span>Python 爬虫</span>
+										<span>C语言</span>
+										<span>C Sharp</span>
+										<span>Unity3D 基础</span>
+										<span>Lua脚本</span>
+										<span>Php 基础</span>
+									</div>
 								</div>
 								<!-- 扩展知识模块 -->
 								<div class="other-mod mod">
-
+									<div class="mod-title">Extend <span class="iconfont icon-kexuejishu-"></span></div>
+									<div class="tag-cont other-tag-cont">
+										<span>MySQL</span>
+										<span>MongoDB</span>
+										<span>Linux</span>
+										<span>Nginx</span>
+										<span>Maven</span>
+										<span>Git</span>
+										<span>Docker</span>
+										<span>ApiFox</span>
+										<span>JMeter</span>
+										<span>23种设计模式</span>
+										<span>数据结构与算法</span>
+									</div>
 								</div>
 							</div>
 						</section>
