--- a/index.html
+++ b/index.html
@@ -185,6 +185,32 @@
 							</div>
 						</section>
 						<!-- 模块2 end -->
+
+						<!-- 模块3 工作/项目经历 start -->
+						<section class="part3">
+							<!-- 工作经历 -->
+							<div class="work-mod">
+
+							</div>
+							<!-- 项目经历 -->
+							<div class="project-mod">
+
+							</div>
+						</section>
+						<!-- 模块3 end -->
+
+						<!-- 模块4 兴趣爱好 start -->
+						<section class="part4">
+
+						</section>
+						<!-- 模块4 end -->
+
+						<!-- 模块5 个人介绍 start -->
+						<section class="part5">
+
+						</section>
+						<!-- 模块5 end -->
+
 					</div>
 				</div>
 				<!-- 主体区域 end -->
