--- a/index.html
+++ b/index.html
@@ -201,7 +201,15 @@
 
 						<!-- 模块4 兴趣爱好 start -->
 						<section class="part4">
+							<div class="game-mod">
+								<div class="game-title">Game游戏</div>
+							</div>
+							<div class="anime-mod">
 
+							</div>
+							<div class="music-mod">
+
+							</div>
 						</section>
 						<!-- 模块4 end -->
 
