--- a/index.html
+++ b/index.html
@@ -202,13 +202,22 @@
 						<!-- 模块4 兴趣爱好 start -->
 						<section class="part4">
 							<div class="game-mod">
-								<div class="game-title">Game游戏</div>
+								<div class="game-title mod-title">Game游戏</div>
+								<div class="game-mod-cont">
+
+								</div>
 							</div>
 							<div class="anime-mod">
+								<div class="anime-title mod-title">Anime动画</div>
+								<div class="anime-mod-cont">
 
+								</div>
 							</div>
 							<div class="music-mod">
+								<div class="music-title mod-title">Music音乐</div>
+								<div class="music-mod-cont">
 
+								</div>
 							</div>
 						</section>
 						<!-- 模块4 end -->
