更新结构/调整样式

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<!-- 外部CSS -->
 		<link rel="stylesheet" href="//at.alicdn.com/t/c/font_4089869_p52ud4je89.css">
 		<link rel="stylesheet" href="./css/common.css">
+		<link rel="stylesheet" href="./css/anime.css">
 		<link rel="stylesheet" href="./css/font.css">
 		<link rel="stylesheet" href="./css/index.css">
 		
@@ -203,6 +204,21 @@
 						<section class="part4">
 							<div class="game-mod">
 								<div class="game-title">Game游戏</div>
+								<div class="game-list">
+									<div class="game-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="game-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="game-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="game-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+								</div>
+
 							</div>
 							<div class="anime-mod">
 
