--- a/index.html
+++ b/index.html
@@ -206,23 +206,27 @@
 								<div class="game-title">Game游戏</div>
 								<div class="game-list">
 									<div class="game-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/img-game1.jpg" alt="">
 									</div>
 									<div class="game-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/img-game2.jpg" alt="">
 									</div>
 									<div class="game-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/img-game3.jpg" alt="">
 									</div>
 									<div class="game-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/img-game4.png" alt="">
 									</div>
 								</div>
 								<p>游戏真的是从小到大都喜欢的一个事物,从我小学第一次进入黑网吧以来,我便对游戏产生了浓厚的兴趣,儿时的便特别喜欢写游戏攻略书,以及设计一些奇妙的游戏设定;虽然这个梦想因为现实中的各种事情影响到了但是也许有那么一天我会重拾这个梦想,成为一个游戏开发者吧(笑</p>
+								<p>图一：巫师3，是我喜欢的单机作品的代表，我喜欢很多单机大作，让它来做代表可能是我更偏爱巫师3这种中世纪+魔幻类型</p>
+								<p>图二：Pokemon，一个我无论如何都要单独拿出来讲的一个系列，我钟爱像素多于真实，偏爱2D多于3D，偏爱养成多于即使对抗，可以说宝可梦就是长在我xp上的一部作品，同时本人也是借该作品了解到的任天堂（虽然它的任天堂血统并不纯），遇到上了跟多优秀的作品。</p>
+								<p>图三：八方旅人，把它放在这里跟多的是想表达我对日式rpg的喜爱，最终幻想、勇者斗恶龙、女神异闻录、塞尔达传说；剑与魔法，勇者与恶龙，拯救公主什么的我可太爱了，而八方旅人我认为它是近几年内可以代表传统日式RPG的游戏。</p>
+								<p>图四：Minecraft，我的世界，承包了我初中多数欢乐的游戏，如今热情消退，但我还是会时常看看这位老朋友，本人建筑党</p>
+								<p>补充：其实很多游戏类型我没放进来，其中最多手游和网游，但是本人玩过的手游也很多呀，早前的王国保卫战、雷霆战机、宠物王国、家园6&7、江湖风云录，到如今原神、崩三、明日方舟，网游则是很久没玩了War3、cf、csgo、qq飞车、仙剑......他们承包了我很多记忆，但也只是如匆匆过客罢了</p>
 							</div>
 							<div class="anime-mod">
 								<div class="anime-title">Anime动画</div>
-
 							</div>
 							<div class="music-mod">
 								<div class="music-title">Music音乐</div>
