--- a/index.html
+++ b/index.html
@@ -206,16 +206,16 @@
 								<div class="game-title">Game游戏</div>
 								<div class="game-list">
 									<div class="game-list-item">
-										<img src="./images/img-game1.jpg" alt="">
+										<img src="./images/img-game1.jpg" alt="巫师3">
 									</div>
 									<div class="game-list-item">
-										<img src="./images/img-game2.jpg" alt="">
+										<img src="./images/img-game2.jpg" alt="Pokemon">
 									</div>
 									<div class="game-list-item">
-										<img src="./images/img-game3.jpg" alt="">
+										<img src="./images/img-game3.jpg" alt="八方旅人">
 									</div>
 									<div class="game-list-item">
-										<img src="./images/img-game4.png" alt="">
+										<img src="./images/img-game4.png" alt="我的世界">
 									</div>
 								</div>
 								<p>游戏真的是从小到大都喜欢的一个事物,从我小学第一次进入黑网吧以来,我便对游戏产生了浓厚的兴趣,儿时的便特别喜欢写游戏攻略书,以及设计一些奇妙的游戏设定;虽然这个梦想因为现实中的各种事情影响到了但是也许有那么一天我会重拾这个梦想,成为一个游戏开发者吧(笑</p>
@@ -228,7 +228,27 @@
 							<div class="anime-mod">
 								<div class="anime-title">Anime动画</div>
 								<div class="anime-list">
-									
+									<div class="anime-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="anime-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="anime-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="anime-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="anime-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="anime-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="anime-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
 								</div>
 							</div>
 							<div class="music-mod">
