--- a/index.html
+++ b/index.html
@@ -249,10 +249,18 @@
 									<div class="anime-list-item">
 										<img src="./images/header-1.jpg" alt="">
 									</div>
+									<div class="anime-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
 								</div>
 							</div>
 							<div class="music-mod">
 								<div class="music-title">Music音乐</div>
+								<div class="music-list">
+									<div class="music-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+								</div>
 							</div>
 						</section>
 						<!-- 模块4 end -->
