--- a/index.html
+++ b/index.html
@@ -260,6 +260,18 @@
 									<div class="music-list-item">
 										<img src="./images/header-1.jpg" alt="">
 									</div>
+									<div class="music-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="music-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="music-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
+									<div class="music-list-item">
+										<img src="./images/header-1.jpg" alt="">
+									</div>
 								</div>
 							</div>
 						</section>
