--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<meta name="Description" content="CoffeeShop，即咖啡厅，是一个萌新程序员的全静态个人简历网站" />
 		<meta name="Keywords" content="个人网站，咖啡厅，Coffee_Shop，个人简历，独立网站" />
 		<title>Coffee_Shop - 咖啡の个人简历网站</title>
+
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-		
 		<!-- 外部CSS -->
 		<link rel="stylesheet" href="//at.alicdn.com/t/c/font_4089869_p52ud4je89.css">
 		<link rel="stylesheet" href="./css/common.css">
@@ -229,28 +229,28 @@
 								<div class="anime-title">Anime动画</div>
 								<div class="anime-list">
 									<div class="anime-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/anime-img1.jpg" alt="">
 									</div>
 									<div class="anime-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/anime-img2.png" alt="">
 									</div>
 									<div class="anime-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/anime-img3.jpg" alt="">
 									</div>
 									<div class="anime-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/anime-img4.jpg" alt="">
 									</div>
 									<div class="anime-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/anime-img5.jpg" alt="">
 									</div>
 									<div class="anime-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/anime-img6.jpg" alt="">
 									</div>
 									<div class="anime-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/anime-img7.jpg" alt="">
 									</div>
 									<div class="anime-list-item">
-										<img src="./images/header-1.jpg" alt="">
+										<img src="./images/anime-img8.jpg" alt="">
 									</div>
 								</div>
 							</div>
