--- a/index.html
+++ b/index.html
@@ -253,6 +253,11 @@
 										<img src="./images/anime-img8.jpg" alt="">
 									</div>
 								</div>
+								<p>《海贼王》是一部极具魅力和感染力的漫画作品，讲述了主人公路飞带领船员们穿越大海，寻找传说中的“One Piece”宝藏的冒险故事。这部作品让人们感受到了友情、勇气、冒险、成长等多种情感，同时也呈现出了丰富的人物形象和精彩的战斗场面。无论您是漫迷还是新手，都一定会为这部经典之作所着迷！</p>
+								<p>"夏目友人帐" 是一部非常感人的作品，让人们感受到友情、家庭、人性等主题的深刻探讨。通过少年夏目和妖怪们的交流和互动，我们可以看到他们之间的温暖互动，以及每个人物内心的复杂情感。这部作品不仅有精美的画面和动人的音乐，更是一部能够触动人心的动漫作品。</p>
+								<p>“命运石之门”是一部充满想象力和疯狂的动画片，讲述了一群年轻人通过时间旅行和多重宇宙的穿梭，试图改变他们的命运和拯救他们所爱的人的故事。它不仅仅是一部科幻动画，也是一部关于友情、爱情、牺牲和成长的故事。如果你喜欢高科技和时间旅行的故事，那么“命运石之门”绝对值得一看！</p>
+								<p></p>
+								<p></p>
 							</div>
 							<div class="music-mod">
 								<div class="music-title">Music音乐</div>
