add background inages

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<meta name="robots" content="all">
 		<meta name="Copyright" content="FengmStudio" />
 		<meta name="author" content="FengmStudio-CaFe" />
-		<meta name="Description" content="CoffeeShop，即咖啡厅，是一个萌新程序员的全静态个人简历网站" />
-		<meta name="Keywords" content="个人网站，咖啡厅，Coffee_Shop，个人简历，独立网站" />
-		<title>Coffee_Shop - 咖啡の个人简历网站</title>
+		<meta name="Description" content="CoffeeShop,即咖啡厅,是一个萌新程序员的全静态个人简历网站" />
+		<meta name="Keywords" content="个人网站,咖啡厅,Coffee_Shop,Cafe_shop,个人简历,独立网站" />
+		<title>Cafe_Shop - 咖啡の个人简历网站</title>
 
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 		<!-- 外部CSS -->
@@ -24,27 +24,37 @@
 
         <link rel="stylesheet" href="./css/jquery.fullpage.css">
         <style>
-            .section { 
-                text-align: center; 
-                font: 50px "Microsoft Yahei"; 
-                color: #fff;
-                background:pink ;
-            }
-            .section p{
-                font: 30px "Microsoft Yahei";
-            }
         </style>
 		
 	</head>
 	
 	<body>
-        <div class="wrap" id="content">
-            <div class="section">
-                h1Some section</div>
-            <div class="section">Some section</div>
-            <div class="section">Some section</div>
-            <div class="section">Some section</div>
+        <div class="wrap">
+            <div class="content" id="content">
+                <div class="section part1">
+                    Cafe
+                </div>
+                <div class="section part2">
+                    Information
+                </div>
+                <div class="section part3">
+                    TechnologyStack
+                </div>
+                <div class="section part4">
+                    Experience
+                </div>
+                <div class="section part5">
+                    Hobbies
+                </div>
+                <div class="section part6">
+                    Everyday
+                </div>
+                <div class="section part7">
+                    Finally
+                </div>
+            </div>
         </div>
+        
 	</body>
 	
     <!-- 外链JS -->
