--- a/index.html
+++ b/index.html
@@ -29,13 +29,72 @@
 	</head>
 	
 	<body>
+        <h1 class="hide-text">Cafe_Shop - 咖啡の个人简历网站</h1>
         <div class="wrap">
             <div class="content" id="content">
                 <div class="section part1">
-                    Cafe
+                    <div class="hide-text">main</div>
                 </div>
                 <div class="section part2">
-                    Information
+                    <div class="part2-cont">
+                        <div class="part2-left">
+                            <div class="head-cover"></div>
+                            <div class="nickname sev-thirty-box">
+                                <div>
+                                    <span>常用昵称</span>
+                                </div>
+                                <div>
+                                    <p>咖啡</p>
+                                    <p>咖啡Killer</p>
+                                    <p>Coffee_Killer</p>
+                                </div>
+                            </div>
+                            <div class="wx-num sev-thirty-box">
+                                <div>
+                                    <span>微信号</span>
+                                </div>
+                                <div>
+                                    <p>Coffee2113</p>
+                                </div>
+                            </div>
+                            <div class="phone-num sev-thirty-box">
+                                <div>
+                                    <span>手机号</span>
+                                </div>
+                                <div>
+                                    <p>1733******81</p>
+                                </div>
+                            </div>
+                            <div class="qq-num sev-thirty-box">
+                                <div>
+                                    <span>QQ</span>
+                                </div>
+                                <div>
+                                    <p>1691810090</p>
+                                </div>
+                            </div>
+                            <div class="email sev-thirty-box">
+                                <div>
+                                    <span>常用邮箱</span>
+                                </div>
+                                <div>
+                                    <p>zai******@163.com</p>
+                                </div>
+                            </div>
+                            <div class="address sev-thirty-box">
+                                <div>
+                                    <span>现居住地</span>
+                                </div>
+                                <div>
+                                    <p>广东·深圳</p>
+                                </div>
+                            </div>
+                            
+                        </div>
+                        <div class="part2-right">
+                            
+                        </div>
+                    </div>
                 </div>
                 <div class="section part3">
                     TechnologyStack
