--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 <div class="section part1">
                     <div class="hide-text">main</div>
                 </div>
+                <!-- 网络昵称、邮箱、手机号、微信号、B站链接、QQ号、当前职业、当前位置、目标、学历、 -->
                 <div class="section part2">
                     <div class="part2-cont">
+                        <h1 class="part2-title">Information</h1>
                         <div class="part2-left">
                             <div class="head-cover"></div>
                             <div class="nickname sev-thirty-box">
@@ -81,18 +83,32 @@
                                     <p>zai******@163.com</p>
                                 </div>
                             </div>
+                        </div>
+                        <div class="part2-right">
                             <div class="address sev-thirty-box">
                                 <div>
                                     <span>现居住地</span>
                                 </div>
                                 <div>
-                                    <p>广东·深圳</p>
+                                    <p>广东 · 深圳</p>
                                 </div>
                             </div>
-                            
-                        </div>
-                        <div class="part2-right">
-                            
+                            <div class="sev-thirty-box work-exp">
+                                <div>工作经验</div>
+                                <div>4月</div>
+                            </div>
+                            <div class="sev-thirty-box current-jobs">
+                                <div>当前职业</div>
+                                <div>前端开发</div>
+                            </div>
+                            <div class="sev-thirty-box target-jobs">
+                                <div>理想目标</div>
+                                <div>全栈开发工程师</div>
+                            </div>
+                            <div class="sev-thirty-box educ-bg">
+                                <div>教育背景</div>
+                                <div>专科 (23届潮汕职业技术学院毕业生)</div>
+                            </div>
                         </div>
                     </div>
                 </div>
