--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
                     </div>
                 </div>
                 <div class="section part3">
-                    TechnologyStack
+                    <div class="part3-cont">
+                        <h1 class="part3-title">TechnologyStack</h1>
+                        <div class="swiper p3swiper"></div>
+                    </div>
                 </div>
                 <div class="section part4">
                     Experience
