--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 		<!-- 外部CSS -->
-        
+        <link rel="stylesheet" href="./css/swiper8.min.css">
 		<link rel="stylesheet" href="./css/common.css">
 		<link rel="stylesheet" href="./css/font.css">
 		<link rel="stylesheet" href="./css/index.css">
@@ -115,7 +115,27 @@
                 <div class="section part3">
                     <div class="part3-cont">
                         <h1 class="part3-title">TechnologyStack</h1>
-                        <div class="swiper p3swiper"></div>
+                        <div class="swiper p3swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <span class="tech-item">Java</span>
+                                    <span class="tech-item">C++</span>
+                                    <span class="tech-item">Python</span>
+                                    <span class="tech-item">Php</span>
+                                    <span class="tech-item">JavaScript</span>
+                                    <span class="tech-item">C#</span>
+                                    <span class="tech-item">Lua</span>
+                                    <span class="tech-item">Android</span>
+                                    <span class="tech-item">Golang</span>
+                                    <span class="tech-item">kotlin</span>
+                                    <span class="tech-item">.Net</span>
+                                    <span class="tech-item">Rust</span>
+                                </div>
+                                <div class="swiper-slide">Slide 2</div>
+                                <div class="swiper-slide">Slide 3</div>
+                                <div class="swiper-slide">Slide 4</div>
+                              </div>
+                        </div>
                     </div>
                 </div>
                 <div class="section part4">
@@ -138,6 +158,7 @@
     <!-- 外链JS -->
     <script src="./js/jquery.js"></script>
     <script src="./js/jquery.fullpage.js"></script>
+    <script src="./js/swiper8.min.js"></script>
     <script src="./js/index.js"></script>
     <!-- <script src="./js/resize.js"></script> -->
 
