--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="section part3">
                     <div class="part3-cont">
                         <h1 class="part3-title">TechnologyStack</h1>
-                        <div class="swiper p3swiper">
+                        <div class="swiper p3swiper swiper-no-swiping">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <li class="tech-item">JavaSE基础</li>
