--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<meta name="Description" content="CoffeeShop,即咖啡厅,是一个萌新程序员的全静态个人简历网站" />
 		<meta name="Keywords" content="个人网站,咖啡厅,Coffee_Shop,Cafe_shop,个人简历,独立网站" />
 		<title>Cafe_Shop - 咖啡の个人简历网站</title>
-
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 		<!-- 外部CSS -->
         <link rel="stylesheet" href="./css/swiper8.min.css">
@@ -115,17 +114,13 @@
                 <div class="section part3">
                     <div class="part3-cont">
                         <h1 class="part3-title">TechnologyStack</h1>
-                        <div class="swiper p3swiper swiper-no-swiping">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <li class="tech-item">JavaSE基础</li>
+                        <div class="part3-list">
+                            <div class="part3-item">
+                                <div class="progress-outer">
+                                    <div class="progress-inner"></div>
                                 </div>
-                                <div class="swiper-slide">Slide 2</div>
-                                <div class="swiper-slide">Slide 3</div>
-                                <div class="swiper-slide">Slide 4</div>
-                              </div>
+                            </div>
                         </div>
-                        <div class="p3swiper-pagination"></div>
                     </div>
                 </div>
                 <div class="section part4">
@@ -176,12 +171,6 @@
                 <div class="section part5">
                     Hobbies
                 </div>
-                <div class="section part6">
-                    Everyday
-                </div>
-                <div class="section part7">
-                    Finally
-                </div>
             </div>
         </div>
         
@@ -200,4 +189,4 @@
 </html>
 <!-- Declaration : 部分素材来源网络，侵删 -->
 <!-- Version 2.0  RemakeTime: 2023-7-7 23:07:13 -->
-<!-- Last Update Time : 2023-6-28 21:53:51 -->
+<!-- Last Update Time : 2023年8月23日23:21:54 -->
