--- a/index.html
+++ b/index.html
@@ -166,11 +166,25 @@
                         <div class="p4swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    
+                                    <div class="story-box">
+
+                                    </div>
                                 </div>
-                                <div class="swiper-slide">Slide 2</div>
-                                <div class="swiper-slide">Slide 3</div>
-                                <div class="swiper-slide">Slide 4</div>
+                                <div class="swiper-slide">
+                                    <div class="story-box">
+
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="story-box">
+
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="story-box">
+
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
