--- a/index.html
+++ b/index.html
@@ -169,28 +169,28 @@
                                     <div class="story-box">
                                         <h3>LESSON-1</h3>
                                         <img src="./images/lesson1.jpg" alt="">
-                                        <span class="timer">2020年中</span>
+                                        <span class="timer">2020YearEnd</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="story-box">
                                         <h3>LESSON-2</h3>
                                         <img src="./images/lesson2.jpg" alt="">
-                                        <span class="timer">2021年初</span>
+                                        <span class="timer">2021YearBeg</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="story-box">
                                         <h3>LESSON-3</h3>
                                         <img src="./images/lesson3.jpg" alt="">
-                                        <span class="timer">2022年初</span>
+                                        <span class="timer">2022YearBeg</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="story-box">
                                         <h3>LESSON-4</h3>
                                         <img src="./images/lesson4.jpg" alt="">
-                                        <span class="timer">2023年初</span>
+                                        <span class="timer">2023YearBeg</span>
                                     </div>
                                 </div>
                             </div>
