--- a/index.html
+++ b/index.html
@@ -168,28 +168,28 @@
                                 <div class="swiper-slide">
                                     <div class="story-box" date-idx="0">
                                         <h3>LESSON-1</h3>
-                                        <img src="./images/lesson1.jpg" alt="">
+                                        <img src="./images/lesson-small1.jpg" alt="">
                                         <span class="timer">2020YearEnd</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="story-box" date-idx="1">
                                         <h3>LESSON-2</h3>
-                                        <img src="./images/lesson2.jpg" alt="">
+                                        <img src="./images/lesson-small2.jpg" alt="">
                                         <span class="timer">2021YearBeg</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="story-box" date-idx="2">
                                         <h3>LESSON-3</h3>
-                                        <img src="./images/lesson3.jpg" alt="">
+                                        <img src="./images/lesson-small3.jpg" alt="">
                                         <span class="timer">2022YearBeg</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="story-box" date-idx="3">
                                         <h3>LESSON-4</h3>
-                                        <img src="./images/lesson4.jpg" alt="">
+                                        <img src="./images/lesson-small4.jpg" alt="">
                                         <span class="timer">2023YearBeg</span>
                                     </div>
                                 </div>
