--- a/index.html
+++ b/index.html
@@ -206,7 +206,10 @@
 
             <!-- 弹窗区域 -->
             <div class="pop-model" id="pop-story">
-
+                <div class="pop-story-cont">
+                    <!-- <h3 class="title"></h3>
+                    <p class="content"></p> -->
+                </div>
             </div>
 
             <!-- 弹窗测试区域 -->
