--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <div class="part3-item">
                                 <span class="tips">JAVA</span>
                                 <div class="progress-outer">
-                                    <div class="progress-inner"></div>
+                                    <div class="progress-inner"><span class="progress-number">50%</span></div>
                                 </div>
                                 <div class="tags">如: SpringCloud、SpringBoot、MybatisPlus、MVC、Kotlin、JVM原理、Netty</div>
                             </div>
