--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="part3-cont">
                         <h1 class="part3-title">TechnologyStack</h1>
                         <div class="part3-list">
-                            <div class="part3-item">
+                            <!-- <div class="part3-item">
                                 <span class="tips">JAVA</span>
                                 <div class="progress-outer">
                                     <div class="progress-inner"><span class="progress-number">50%</span></div>
@@ -156,7 +156,7 @@
                                     <div class="progress-inner"></div>
                                 </div>
                                 <div class="tags">如: C、C++、Python、GOlang、android、php、ThinkPHP</div>
-                            </div>
+                            </div> -->
                         </div>
                         <a href="javascript:alert(0)" class="part3-btn">[ 全栈开发工程师 ]</a>
                     </div>
