--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- CreateTime: 2023-5-23 23:26  |  Team: Fengm Studio  |  Creator: Coffee_Killer -->
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,7 +12,7 @@
 		<meta name="Copyright" content="FengmStudio" />
 		<meta name="author" content="FengmStudio-CaFe" />
 		<meta name="Description" content="CoffeeShop,即咖啡厅,是一个萌新程序员的全静态个人简历网站" />
-		<meta name="Keywords" content="个人网站,咖啡厅,Coffee_Shop,Cafe_shop,个人简历,独立网站" />
+		<meta name="Keywords" content="个人网站,咖啡厅,Coffee_Shop,Cafe_shop,个人简历,独立网站,Jquery.fullpage" />
 		<title>Cafe_Shop - 咖啡の个人简历网站</title>
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 		<!-- 外部CSS -->
@@ -121,41 +121,6 @@
                                     <div class="progress-inner"><span class="progress-number">50%</span></div>
                                 </div>
                                 <div class="tags">如: SpringCloud、SpringBoot、MybatisPlus、MVC、Kotlin、JVM原理、Netty</div>
-                            </div>
-                            <div class="part3-item">
-                                <span class="tips">Web前端</span>
-                                <div class="progress-outer">
-                                    <div class="progress-inner"></div>
-                                </div>
-                                <div class="tags">如: Vue3、Uniapp、Threejs、TypeScript、EChart、Nodejs、Express、微信小程序</div>
-                            </div>
-                            <div class="part3-item">
-                                <span class="tips">运维</span>
-                                <div class="progress-outer">
-                                    <div class="progress-inner"></div>
-                                </div>
-                                <div class="tags">如: Liunx、Docker、Redis、MongoDB、Nginx、MySQL</div>
-                            </div>
-                            <div class="part3-item">
-                                <span class="tips">游戏开发</span>
-                                <div class="progress-outer">
-                                    <div class="progress-inner"></div>
-                                </div>
-                                <div class="tags">如: C#、Unity、RPGMaker</div>
-                            </div>
-                            <div class="part3-item">
-                                <span class="tips">基础知识</span>
-                                <div class="progress-outer">
-                                    <div class="progress-inner"></div>
-                                </div>
-                                <div class="tags">如: 计算机网络、计算机组成原理、信息安全与维护、设计模式、数据结构与算法</div>
-                            </div>
-                            <div class="part3-item">
-                                <span class="tips">OTHER</span>
-                                <div class="progress-outer">
-                                    <div class="progress-inner"></div>
-                                </div>
-                                <div class="tags">如: C、C++、Python、GOlang、android、php、ThinkPHP</div>
                             </div> -->
                         </div>
                         <a href="javascript:alert(0)" class="part3-btn">[ 全栈开发工程师 ]</a>
