--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 	</body>
 	
     <!-- 外链JS -->
+    <script src="./js/TweetMax.min.js"></script>
     <script src="./js/jquery.js"></script>
     <script src="./js/jquery.fullpage.js"></script>
     <script src="./js/swiper8.min.js"></script>
@@ -198,4 +199,4 @@
 </html>
 <!-- Declaration : 部分素材来源网络，侵删 -->
 <!-- Version 2.0  RemakeTime: 2023-7-7 23:07:13 -->
-<!-- Last Update Time : 2023年8月23日23:21:54 -->
+<!-- Last Update Time : 2023年8月30日22:27:08 -->
