--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                 <div class="pop-story-cont">
                     <!-- <h3 class="title"></h3>
                     <p class="content"></p> -->
+                    <a class="pop-close" href="javascript:closePop()">×</a>
                 </div>
             </div>
 
