--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="pop-story-cont">
                     <!-- <h3 class="title"></h3>
                     <p class="content"></p> -->
-                    <a class="pop-close" href="javascript:closePop()">×</a>
+                    <!-- <a class="pop-close" href="javascript:closePop('pop-story')">×</a> -->
                 </div>
             </div>
 
